<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.igormaznitsa</groupId>
        <artifactId>mind-map</artifactId>
        <version>1.8.0-SNAPSHOT</version>
    </parent>

    <artifactId>idea-mindmap</artifactId>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <max.jdk.version>21</max.jdk.version>
        <meta.version>1.1.3</meta.version>
        <gradle.executable>gradle9</gradle.executable>
    </properties>

    <profiles>
        <profile>
            <id>local-idea-libs</id>
            <properties>
                <local.idea.lib.path>/home/igorm/Programs/idea-IC-222.3345.118/lib</local.idea.lib.path>
            </properties>    
            <dependencies>
                <dependency>
                    <groupId>com.intellij</groupId>
                    <artifactId>idea-app</artifactId>
                    <version>0-SNAPSHOT</version>
                    <scope>system</scope>
                    <systemPath>${local.idea.lib.path}/app.jar</systemPath>
                </dependency>
                <dependency>
                    <groupId>com.intellij</groupId>
                    <artifactId>idea-3rd-party-rt</artifactId>
                    <version>0-SNAPSHOT</version>
                    <scope>system</scope>
                    <systemPath>${local.idea.lib.path}/3rd-party-rt.jar</systemPath>
                </dependency>
                <dependency>
                    <groupId>com.intellij</groupId>
                    <artifactId>idea-util</artifactId>
                    <version>0-SNAPSHOT</version>
                    <scope>system</scope>
                    <systemPath>${local.idea.lib.path}/util.jar</systemPath>
                </dependency>
                <dependency>
                    <groupId>com.intellij</groupId>
                    <artifactId>idea-util-rt</artifactId>
                    <version>0-SNAPSHOT</version>
                    <scope>system</scope>
                    <systemPath>${local.idea.lib.path}/util_rt.jar</systemPath>
                </dependency>
                <dependency>
                    <groupId>com.intellij</groupId>
                    <artifactId>idea-rt</artifactId>
                    <version>0-SNAPSHOT</version>
                    <scope>system</scope>
                    <systemPath>${local.idea.lib.path}/idea_rt.jar</systemPath>
                </dependency>
                <dependency>
                    <groupId>com.intellij</groupId>
                    <artifactId>idea-annotations</artifactId>
                    <version>0-SNAPSHOT</version>
                    <scope>system</scope>
                    <systemPath>${local.idea.lib.path}/annotations.jar</systemPath>
                </dependency>
                <dependency>
                    <groupId>com.intellij</groupId>
                    <artifactId>idea-forms-rt</artifactId>
                    <version>0-SNAPSHOT</version>
                    <scope>system</scope>
                    <systemPath>${local.idea.lib.path}/forms_rt.jar</systemPath>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>com.igormaznitsa</groupId>
            <artifactId>meta-annotations</artifactId>
        </dependency>
        <dependency>
            <groupId>com.igormaznitsa</groupId>
            <artifactId>mind-map-swing-panel</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.igormaznitsa</groupId>
            <artifactId>mind-map-ide-common</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>
            ${project.basedir}${file.separator}src
        </sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <executions>
                    <execution>
                        <id>clean-gradle-folders</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                        <configuration>
                            <followSymLinks>false</followSymLinks>
                            <filesets>
                                <fileset>
                                    <directory>${basedir}${file.separator}build</directory>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </fileset>
                                <fileset>
                                    <directory>${basedir}${file.separator}.gradle</directory>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </fileset>
                            </filesets>
                        </configuration>
                    </execution>
                    <execution>
                        <id>clean-build-downloaded</id>
                        <configuration>
                            <filesets>
                                <fileset>
                                    <directory>${project.basedir}/gradle</directory>
                                    <followSymlinks>false</followSymlinks>
                                </fileset>
                                <fileset>
                                    <directory>${project.basedir}</directory>
                                    <includes>
                                        <include>idea-mindmap.zip</include>
                                        <include>gradlew</include>
                                        <include>gradlew.bat</include>
                                    </includes>
                                    <followSymlinks>false</followSymlinks>
                                </fileset>
                                <fileset>
                                    <directory>${project.basedir}/downloaded</directory>
                                    <followSymlinks>false</followSymlinks>
                                </fileset>
                                <fileset>
                                    <directory>${project.basedir}/build</directory>
                                    <followSymlinks>false</followSymlinks>
                                </fileset>
                                <fileset>
                                    <directory>${project.basedir}/out</directory>
                                    <followSymlinks>false</followSymlinks>
                                </fileset>
                            </filesets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>gradle</id>
                        <phase>compile</phase>
                        <configuration>
                            <executable>${gradle.executable}</executable>
                            <arguments>
                                <argument>dependencies</argument>
                                <argument>clean</argument>
                                <argument>build</argument>
                                <argument>-S</argument>
                                <argument>--warning-mode</argument>
                                <argument>all</argument>
                                <argument>-Pjavac.deprecation=true</argument>
                                <argument>-Pmeta_version=${com.igormaznitsa:meta-annotations:jar.version}</argument>
                                <argument>-Pjsoup_version=${org.jsoup:jsoup:jar.version}</argument>
                                <argument>-Pjson_version=${org.json:json:jar.version}</argument>
                                <argument>-Pmaven_project_version=${project.version}</argument>
                            </arguments>
                        </configuration>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>gradle-repository</id>
            <url>https://repo.gradle.org/gradle/libs-releases-local/</url>
        </repository>
    </repositories>

</project>
